# neo-service-layer

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .env.production.external  .env.production.template  .env.template  .env.test  .gitignore  API_CONSISTENCY_REVIEW.md  ArchitectureValidation.cs  BUILD_ERROR_FIX_SUMMARY.md  BUILD_FIX_SUMMARY.md  BUILD_STATUS_SUMMARY.md  BUILD_SUCCESS.txt  CHANGELOG.md  CMakeLists.txt  COMPLETE_PRODUCTION_IMPLEMENTATION.md  COMPLETE_SIMULATION_ELIMINATION.md  COMPREHENSIVE_ALL_PROJECTS_REVIEW_COMPLETE.md  COMPREHENSIVE_IMPLEMENTATION_COMPLETE.md  COMPREHENSIVE_PROJECT_REVIEW_COMPLETE.md  COMPREHENSIVE_UNIT_TEST_COVERAGE.md  CONTRIBUTING.md  CORE_SERVICES_IMPLEMENTATION.md  DEPLOYMENT_STRATEGY_AND_RECOMMENDATIONS.md  DEVCONTAINER_SETUP_GUIDE.md  DOCKER_CONNECTIVITY_TROUBLESHOOTING.md  DOCKER_HUB_DEPLOYMENT.md  DOCUMENTATION_AND_WEBSITE_ACTION_PLAN.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Dockerfile  Dockerfile.minimal  Dockerfile.occlum  Dockerfile.occlum.production  Dockerfile.optimized  Dockerfile.simple  Dockerfile.ubuntu24  (+167 more)
src/NeoServiceLayer.Tee.Enclave/: CMakeLists.txt  GasAccountingManager.cs  IOcclumInterface.cs  IPersistentStorageService.cs  ISgxEnclaveInterface.cs  ITeeEnclaveInterface.cs  JavaScriptContextAdapter.cs  JavaScriptEngine.cs  JavaScriptExecutionContext.cs  JavaScriptExecutionService.cs  JavaScriptExecutor.cs  NeoServiceLayer.Tee.Enclave.csproj  OcclumFileStorageProvider.cs  OcclumInterface.cs  OcclumJavaScriptUtilities.cs  README.md  SecurityException.cs  ServiceCollectionExtensions.cs  SgxJavaScriptUtilities.cs  UserSecretManager.cs  build_enclave.ps1  build_occlum.ps1  clean_enclave.ps1  remove_openenclave_files.ps1  update_build_to_occlum.ps1
src/NeoServiceLayer.Tee.Enclave/Enclave/: README.md  update_to_occlum.ps1
src/NeoServiceLayer.Tee.Enclave/Enclave/Attestation/: RemoteAttestation.cpp  RemoteAttestation.h
src/NeoServiceLayer.Tee.Enclave/Enclave/Compliance/: ComplianceService.Core.cpp  ComplianceService.Rules.cpp  ComplianceService.Verification.cpp  ComplianceService.h
src/NeoServiceLayer.Tee.Enclave/Enclave/Core/: EnclaveMessageTypes.h  EnclaveUtils.cpp  EnclaveUtils.h  Logger.cpp  Logger.h  MetricsCollector.cpp  MetricsCollector.h  NeoServiceLayerEnclave.Core.cpp  NeoServiceLayerEnclave.Handlers.Consolidated.cpp  NeoServiceLayerEnclave.Handlers.cpp  NeoServiceLayerEnclave.Handlers2.cpp  NeoServiceLayerEnclave.h
src/NeoServiceLayer.Tee.Enclave/Enclave/Crypto/: KeyManager.Core.cpp  KeyManager.Crypto.AES.cpp  KeyManager.Crypto.Consolidated.cpp  KeyManager.Crypto.EC.cpp  KeyManager.Crypto.RSA.cpp  KeyManager.Crypto.cpp  KeyManager.Crypto2.cpp  KeyManager.Crypto3.cpp  KeyManager.KeyGeneration.cpp  KeyManager.Management.cpp  KeyManager.Storage.cpp  KeyManager.cpp  KeyManager.h
src/NeoServiceLayer.Tee.Enclave/Enclave/EventTrigger/: EventTrigger.Core.cpp  EventTrigger.Processing.cpp  EventTrigger.Processing2.cpp  EventTrigger.Registration.cpp  EventTrigger.Storage.cpp  EventTrigger.cpp  EventTrigger.h
src/NeoServiceLayer.Tee.Enclave/Enclave/GasAccounting/: GasAccounting.cpp  GasAccounting.h  GasAccountingManager.cpp  GasAccountingManager.h
src/NeoServiceLayer.Tee.Enclave/Enclave/JavaScript/: JavaScriptEngine.cpp  JavaScriptEngine.h  JavaScriptEngineFactory.cpp  JavaScriptEngineFactory.h  JavaScriptManager.cpp  enclave_main.js  libneoserviceenclave.js
src/NeoServiceLayer.Tee.Enclave/Enclave/Occlum/: NeoServiceLayerEnclave.Occlum.cpp  NeoServiceLayerEnclave.Occlum.h  NeoServiceLayerEnclave.Occlum2.cpp  OcclumEnclave.cpp  OcclumEnclave.h  OcclumEnclave_JS.cpp  OcclumEnclave_Random.cpp  OcclumEnclave_Utils.cpp  OcclumIntegration.Attestation.cpp  OcclumIntegration.Core.cpp  OcclumIntegration.Crypto.cpp  OcclumIntegration.JavaScript.cpp  OcclumIntegration.JavaScriptEngine.cpp  OcclumIntegration.Sealing.cpp  OcclumIntegration.Utils.cpp  OcclumIntegration.cpp  OcclumIntegration.h  OcclumIntegration_Sealing.cpp  OcclumIntegration_Utils.cpp
src/NeoServiceLayer.Tee.Enclave/Enclave/QuickJs/: JsApi.cpp  JsApi.h  JsValue.cpp  QuickJsEngine.cpp  QuickJsEngine.h  QuickJsEngineAdapter.cpp  QuickJsEngineAdapter.h  QuickJsExecutor.cpp  QuickJsExecutor.h
src/NeoServiceLayer.Tee.Enclave/Enclave/Randomness/: RandomnessService.cpp  RandomnessService.h
src/NeoServiceLayer.Tee.Enclave/Enclave/Secrets/: SecretManager.Access.cpp  SecretManager.Access2.cpp  SecretManager.Core.cpp  SecretManager.Crypto.cpp  SecretManager.Storage.cpp  SecretManager.cpp  SecretManager.h
src/NeoServiceLayer.Tee.Enclave/Enclave/Storage/: FileStorageProvider.cpp  FileStorageProvider.h  IPersistentStorageProvider.h  StorageManager.Core.cpp  StorageManager.Management.cpp  StorageManager.Retrieve.cpp  StorageManager.Store.cpp  StorageManager.Transaction.cpp  StorageManager.Utils.cpp  StorageManager.cpp  StorageManager.h
src/NeoServiceLayer.Tee.Enclave/Exceptions/: EnclaveSecurityException.cs  JavaScriptExecutionException.cs
src/Tee/NeoServiceLayer.Tee.Enclave/: AttestationService.cs  Cargo.toml  Dockerfile.occlum  EnclaveConfig.cs  EnclaveException.cs  EnclaveNetworkService.cs  EnclaveServiceAdapter.cs  EnclaveStorageService.cs  EnclaveWrapperAI.cs  EnclaveWrapperCompute.cs  EnclaveWrapperCore.cs  EnclaveWrapperCrypto.cs  EnclaveWrapperStorage.cs  IAttestationService.cs  IEnclaveNetworkService.cs  IEnclaveStorageService.cs  IEnclaveWrapper.cs  NeoServiceLayer.Tee.Enclave.csproj  Occlum.dev.json  Occlum.json  OcclumEnclaveWrapper.cs  ProductionSGXEnclaveWrapper.cs  README.md  build-occlum.sh
src/Tee/NeoServiceLayer.Tee.Enclave/Enclave/: CMakeLists.txt  Makefile  Makefile.sgx  NeoServiceEnclave.lds
src/Tee/NeoServiceLayer.Tee.Enclave/Exceptions/: EnclaveException.cs
src/Tee/NeoServiceLayer.Tee.Enclave/Interfaces/: IEnclaveNetworkService.cs
src/Tee/NeoServiceLayer.Tee.Enclave/Models/: AbstractAccount.cs  AttestationModels.cs  TrainedModel.cs
src/Tee/NeoServiceLayer.Tee.Enclave/Native/: OcclumNativeApi.cs  SgxNativeApi.cs
src/Tee/NeoServiceLayer.Tee.Enclave/src/: account.rs  ai.rs  (+12 more)
(+5030 files in other folders)
