[package]
name = "neo-service-enclave"
version = "1.0.0"
edition = "2021"
authors = ["Neo Service Layer Team"]
description = "Neo Service Layer Rust components for Occlum LibOS"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# Cryptographic dependencies
ring = "0.17"
sha2 = "0.10"
secp256k1 = { version = "0.28", features = ["recovery", "global-context"] }
ed25519-dalek = "2.0"
hex = "0.4"

# HTTP client for Oracle operations
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
url = "2.4"

# JavaScript engine for secure computation
deno_core = "0.351"
deno_runtime = "0.134"

# Compression for storage
flate2 = "1.0"
lz4_flex = "0.11"

# Data structures
indexmap = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Filesystem operations
tempfile = "3.0"

# Optional machine learning support
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }

[features]
default = ["ml"]
ml = ["candle-core", "candle-nn"]

[lib]
name = "neo_service_enclave"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "neo-service-enclave"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true 